--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <ul>
           <!-- ТУТ ПИСАТЬ ОБНОВЛЕНИЯ !-->
           <li><a href="1.html" class="neq">Распродажа головных уборов и очков!         7.08.2019</a></li>
+           <li><a href="шаблон обновлений.html" class="neq">Распродажа головных уборов и очков!         7.08.2019</a></li>
         </ul>
       </nav>
       <section>           
