--- a/1.html
+++ b/1.html
@@ -20,7 +20,7 @@
         
       </article>
       <img src="img/photo-1.png">
-         <a <!-- href="!--обновление предыдущее-         -!"-->>Вперёд&gt;</a></pre></p>
+         <a <!-- href="!--обновление предыдущее-         -!"-->Вперёд&gt;</a></pre></p>
     </main>
     <footer>
             <p class="foters">*<a href="https://vk.com/avataryaclub">Группа "Аватарии" ВКонтакте.</a></p>
