--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ promote their personal projects</p>
             <h2 class="title text-center">Свежее обновление</h2>            
             <div class="block">
                 <h3 class="sub-title text-center">Retro Cafe</h3>
-                <pre>
+                <pre class="intro">
                         Друзья! 
                         
                         Новинка в магазине мебели - коллекция Retro Cafe! 
