--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@ promote their personal projects</p>
             <h2 class="title text-center">Свежее обновление</h2>            
             <div class="block">
                 <h3 class="sub-title text-center">Retro Cafe</h3>
-                <pre class="intro">
+                <p class="intro">
                         Друзья! 
                         
                         Новинка в магазине мебели - коллекция Retro Cafe! 
                         Теперь обустроить собственную кофейню, насладиться звучанием виниловых пластинок или выпить 
                         молочный коктейль в компании приятелей можно не выходя из дома! 
                         Кроме того, у вас есть уникальная возможность купить интерьер и получить комнату в подарок! 
-                        Поторопитесь, акция действует всего неделю.</pre>
+                        Поторопитесь, акция действует всего неделю.</p>
             </div><!--//docs-inner-->         
         </div><!--//container-->
     </section><!--//features-->
