--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@ promote their personal projects</p>
             <div class="block">
                 <h3 class="sub-title text-center">Retro Cafe</h3>
                 
-                        <pre>Друзья! 
-                        
-                        Новинка в магазине мебели - коллекция Retro Cafe! 
-                        Теперь обустроить собственную кофейню, насладиться звучанием виниловых пластинок или выпить 
+                        <p>Друзья! 
+                        <br>
+                        <br>Новинка в магазине мебели - коллекция Retro Cafe! 
+                        <br>Теперь обустроить собственную кофейню, насладиться звучанием виниловых пластинок или выпить 
                         молочный коктейль в компании приятелей можно не выходя из дома! 
-                        Кроме того, у вас есть уникальная возможность купить интерьер и получить комнату в подарок! 
-                        Поторопитесь, акция действует всего неделю.</pre>
+                        <br>Кроме того, у вас есть уникальная возможность купить интерьер и получить комнату в подарок! 
+                        <br>Поторопитесь, акция действует всего неделю.</p>
             </div><!--//docs-inner-->         
         </div><!--//container-->
     </section><!--//features-->
