--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ promote their personal projects</p>
             <div class="block">
                 <h3 class="sub-title text-center">Retro Cafe</h3>
                 
-                        <p class="intro">Друзья! 
+                        <p class="qwer">Друзья! 
                         <br>
                         <br>Новинка в магазине мебели - коллекция Retro Cafe! 
                         <br>Теперь обустроить собственную кофейню, насладиться звучанием виниловых пластинок или выпить 
