--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                     <ul class="nav navbar-nav">
                         <li class="active nav-item sr-only"><a class="scrollto" href="#promo">Главная</a></li>
                         <li class="nav-item"><a class="scrollto" href="#about">Обновления</a></li>
+                        <li class="nav-item"><a class="scrollto" href="#docs">Обновления</a></li>
                     </ul><!--//nav-->
                 </div><!--//navabr-collapse-->
             </nav><!--//main-nav-->
