--- a/index.html
+++ b/index.html
@@ -59,9 +59,16 @@
                 <div class="navbar-collapse collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active nav-item sr-only"><a class="scrollto" href="#promo">Главная</a></li>
-                        <li class="nav-item"><a class="scrollto" href="#about">Обновления</a></li>
-                        <li class="nav-item"><a class="scrollto" href="#docs">Обновления</a></li>
-                    </ul><!--//nav-->
+                        <li class="nav-item"><a class="scrollto" href="">Обновления</a></li>
+                    </ul>
+                    <ul><li><a href=#>Menu 5</a>
+                        <ul class="submenu">
+                            <li><a href=#>1</a></li>
+                            <li><a href=#>2</a></li>
+                            <li><a href=#>Sudmenu 5</a></li>
+                        </ul>
+                    </li>
+                </ul><!--//nav-->
                 </div><!--//navabr-collapse-->
             </nav><!--//main-nav-->
         </div>
