--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
                 </a>
             </h1><!--//logo-->              
             <nav>
-                <ul class="topmenu">
-                  <li><a href="">Главная</a></li>
-                  <li><a href="" class="submenu-link">О нас</a>
+                <ul class="topmenu"
+                  <li><a href="" class="submenu-link">обновление</a>
                     <ul class="submenu">
                       <li><a href="">Производство</a></li>
                       <li><a href="">Магазин</a></li>
