--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                 </a>
             </h1><!--//logo-->              
             <nav>
-                <ul class="topmenu"
-                  <li><a href="" class="submenu-link">обновление</a>
+                <ul class="topmenu">
+                  <li><a href="" class="submenu-link">О нас</a>
                     <ul class="submenu">
                       <li><a href="">Производство</a></li>
                       <li><a href="">Магазин</a></li>
-                      <li><a href="">12</a></li>
+                      <li><a href="">1</a></li>
                     </ul>
                 </li>
                 </ul>
