--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </h1><!--//logo-->              
             <nav>
                 <ul class="topmenu">
-                  <li><a href="" class="submenu-link">О нас</a>
+                  <li><a href="" class="submenu-link">Обнова м</a>
                     <ul class="submenu">
                       <li><a href="">Производство</a></li>
                       <li><a href="">Магазин</a></li>
