--- a/index.html
+++ b/index.html
@@ -47,17 +47,22 @@
                     <span class="logo-title">Avatariaclub</span>
                 </a>
             </h1><!--//logo-->              
-            <nav>
-                <ul class="topmenu">
-                  <li><a href="" class="submenu-link">Обнова м</a>
-                    <ul class="submenu">
-                      <li><a href="">Производство</a></li>
-                      <li><a href="">Магазин</a></li>
-                      <li><a href="">1</a></li>
-                    </ul>
-                </li>
-                </ul>
-              </nav>
+            <nav id="main-nav" class="main-nav navbar-right" role="navigation">
+                <div class="navbar-header">
+                    <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button><!--//nav-toggle-->
+                </div><!--//navbar-header-->            
+                <div class="navbar-collapse collapse" id="navbar-collapse">
+                    <ul class="nav navbar-nav">
+                        <li class="active nav-item sr-only"><a class="scrollto" href="#promo">Главная</a></li>
+                        <li class="nav-item"><a class="scrollto" href="">Обновления</a></li>
+                    </ul><!--//nav-->
+                </div><!--//navabr-collapse-->
+            </nav><!--//main-nav-->
         </div>
     </header><!--//header-->
     
