--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div><!--//navbar-header-->            
                 <div class="navbar-collapse collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active nav-item sr-only"><a class="scrollto" href="#promo">Главная</a></li>
+                        <li class="active nav-item sr-only"><a class="scrollto" href="#promo">Главная1</a></li>
                         <li class="nav-item"><a class="scrollto" href="">Обновления</a></li>
                     </ul><!--//nav-->
                 </div><!--//navabr-collapse-->
