--- a/2.html
+++ b/2.html
@@ -82,19 +82,21 @@
     <section id="docs" class="docs section">
         <div class="container">
             <div class="docs-inner">
-            <h2 class="title text-center">Свежее обновление</h2>            
+            <h2 class="title text-center">Обновление</h2>            
             <div class="block">
-                <h3 class="sub-title text-center">Retro Cafe</h3>
+                <h3 class="sub-title text-center">Добавление активности в кланы</h3>
                 
                         <p class="qwer">Друзья! 
-                        <br>
-                        <br>Новинка в магазине мебели - коллекция Retro Cafe! 
-                        <br>Теперь обустроить собственную кофейню, насладиться звучанием виниловых пластинок или выпить 
-                        молочный коктейль в компании приятелей можно не выходя из дома! 
-                        <br>Кроме того, у вас есть уникальная возможность купить интерьер и получить комнату в подарок! 
-                        <br>Поторопитесь, акция действует всего неделю.</p>
-                        <img src="image/3.png"> 
-            </div><!--//docs-inner-->         
+                            <br>
+
+                                <br>Сегодня мы радуем вас долгожданным обновлением в клубах! 
+                                <br>Первая активность начнется уже сегодня в 21:00 по Мск. 
+                                <br>Обновление выходит без магазинов, так как работа над ними еще ведется. Сейчас у вас есть замечательная возможность заработать рубины к выходу
+                                следующего клубного обновления 😉 
+                                <br>Проявляйте активность, открывайте сундуки, получайте награды! <a href="FAQ1.html">FAQ</a></p>
+                        <img src="image/2.png">
+                        
+                        </div> <!--//docs-inner-->         
         </div><!--//container-->
     </section><!--//features-->
     <!-- ******FOOTER****** --> 
