--- a/FAQ1.html
+++ b/FAQ1.html
@@ -82,19 +82,27 @@
     <section id="docs" class="docs section">
         <div class="container">
             <div class="docs-inner">
-            <h2 class="title text-center">Свежее обновление</h2>            
+            <h2 class="title text-center">FAQ</h2>            
             <div class="block">
-                <h3 class="sub-title text-center">Retro Cafe</h3>
+                <h3 class="sub-title text-center">Клубная активность</h3>
                 
-                        <p class="qwer">Друзья! 
-                        <br>
-                        <br>Новинка в магазине мебели - коллекция Retro Cafe! 
-                        <br>Теперь обустроить собственную кофейню, насладиться звучанием виниловых пластинок или выпить 
-                        молочный коктейль в компании приятелей можно не выходя из дома! 
-                        <br>Кроме того, у вас есть уникальная возможность купить интерьер и получить комнату в подарок! 
-                        <br>Поторопитесь, акция действует всего неделю.</p>
-                        <img src="image/3.png"> 
-            </div><!--//docs-inner-->         
+                        <p class="qwer">Старт клубовой активности: 
+<br>
+                                <br>Первый сундук — 6400 очков суммарной активности всех участников клана,
+                                <br>Второй сундук — 11200 очков активности,
+                                <br>Третий сундук — 16000 очков активности. 
+                                <br>
+                                <br>(!) Для получения всех 3-х сундуков необходимо 16000 очков активности.
+                                <br>Награду получат все, кто заработал не менее 160 очков за день. Нажав на кнопку «Активность», вы сможете просмотреть, кто уже выполнил минимальную 
+                                норму в 160 единиц — появляется значок сундука возле ника. 
+                                <br>Таблица со всеми значениями также доступна для просмотра через «?» в правом верхнем углу раздела «Активность» в клубе. 
+                                <br>Чтобы получить все 3 сундука, необходимо 16000 очков. Распределять нормы можно следующим образом: необходимое количество очков делить на количество
+                                участников. 
+                                <br>
+                                <br>Пример: 16000/40 = 400 (если в клане 40 игроков состоит).</p>
+                        <img src="image/FAQ1.png">
+                        
+                        </div> <!--//docs-inner-->         
         </div><!--//container-->
     </section><!--//features-->
     <!-- ******FOOTER****** --> 
@@ -114,4 +122,3 @@
     <script type="text/javascript" src="assets/js/main.js"></script>       
 </body>
 </html> 
-
