--- a/3.html
+++ b/3.html
@@ -82,19 +82,20 @@
     <section id="docs" class="docs section">
         <div class="container">
             <div class="docs-inner">
-            <h2 class="title text-center">Свежее обновление</h2>            
+            <h2 class="title text-center">Обновление</h2>            
             <div class="block">
-                <h3 class="sub-title text-center">Retro Cafe</h3>
+                <h3 class="sub-title text-center">Интерьер "Retro cafe"</h3>
                 
                         <p class="qwer">Друзья! 
-                        <br>
-                        <br>Новинка в магазине мебели - коллекция Retro Cafe! 
-                        <br>Теперь обустроить собственную кофейню, насладиться звучанием виниловых пластинок или выпить 
-                        молочный коктейль в компании приятелей можно не выходя из дома! 
-                        <br>Кроме того, у вас есть уникальная возможность купить интерьер и получить комнату в подарок! 
-                        <br>Поторопитесь, акция действует всего неделю.</p>
-                        <img src="image/3.png"> 
-            </div><!--//docs-inner-->         
+    <br>
+                                <br>Новинка в магазине мебели - коллекция Retro Cafe! 
+                                <br>Теперь обустроить собственную кофейню, насладиться звучанием виниловых пластинок или выпить 
+                                молочный коктейль в компании приятелей можно не выходя из дома! 
+                                <br>Кроме того, у вас есть уникальная возможность купить интерьер и получить комнату в подарок! 
+                                <br>Поторопитесь, акция действует всего неделю.</p>
+                        <img src="image/3.png">
+                        
+                        </div> <!--//docs-inner-->         
         </div><!--//container-->
     </section><!--//features-->
     <!-- ******FOOTER****** --> 
@@ -114,4 +115,3 @@
     <script type="text/javascript" src="assets/js/main.js"></script>       
 </body>
 </html> 
-
