--- a/obnova.html
+++ b/obnova.html
@@ -82,18 +82,14 @@
     <section id="docs" class="docs section">
         <div class="container">
             <div class="docs-inner">
-            <h2 class="title text-center">Свежее обновление</h2>            
+            <h2 class="title text-center">Список обновлений</h2>            
             <div class="block">
-                <h3 class="sub-title text-center">Retro Cafe</h3>
+                <h3 class="sub-title text-center"></h3>
                 
-                        <p class="qwer">Друзья! 
-                        <br>
-                        <br>Новинка в магазине мебели - коллекция Retro Cafe! 
-                        <br>Теперь обустроить собственную кофейню, насладиться звучанием виниловых пластинок или выпить 
-                        молочный коктейль в компании приятелей можно не выходя из дома! 
-                        <br>Кроме того, у вас есть уникальная возможность купить интерьер и получить комнату в подарок! 
-                        <br>Поторопитесь, акция действует всего неделю.</p>
-                        <img src="image/3.png"> 
+                        <p class="qwer"><a href="1.html">Распродажа головных уборов и очков!(7.08.19)</a></p>
+                        <p class="qwer"><a href="2.html">Добавление активности в клубы!(14.08.19)</a></p>
+                        <p class="qwer"><a href="3.html">Интерьер "Retro cafe"!(21.08.19)</a></p>
+                        
             </div><!--//docs-inner-->         
         </div><!--//container-->
     </section><!--//features-->
