--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="navbar-collapse collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active nav-item sr-only"><a class="scrollto" href="#promo">Главная1</a></li>
-                        <li class="nav-item"><a class="scrollto" href="">Обновления</a></li>
+                        <li class="nav-item"><a class="scrollto" href="obnova.html">Обновления</a></li>
                     </ul><!--//nav-->
                 </div><!--//navabr-collapse-->
             </nav><!--//main-nav-->
