--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                         <li class="active nav-item sr-only"><a class="scrollto" href="#promo">Главная1</a></li>
                         <li class="nav-item"><a href="obnova.html">Обновления</a></li>
                     </ul><!--//nav-->
+                    <a href="obnova.html">Обновления</a>
                 </div><!--//navabr-collapse-->
             </nav><!--//main-nav-->
         </div>
