--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <header id="header" class="header">  
         <div class="container">            
             <h1 class="logo pull-left">
-                <a class="scrollto" href="index.html">
+                <a href="index.html">
                     <span class="logo-title">Avatariaclub</span>
                 </a>
             </h1><!--//logo-->              
@@ -59,7 +59,6 @@
                 <div class="navbar-collapse collapse" id="navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li class="active nav-item sr-only"><a class="scrollto" href="#promo">Главная1</a></li>
-                        <li class="nav-item"><a href="obnova.html">Обновления</a></li>
                     </ul><!--//nav-->
                     <a href="obnova.html">Обновления</a>
                 </div><!--//navabr-collapse-->
