--- a/2.html
+++ b/2.html
@@ -85,7 +85,7 @@
             <div class="docs-inner">
             <h2 class="title text-center">Обновление</h2>            
             <div class="block">
-                <h3 class="sub-title text-center">Добавление активности в кланы</h3>
+                <h3 class="sub-title text-center">Добавление активности в клубы</h3>
                 
                         <p class="qwer">Друзья! 
                             <br>
