--- a/index.html
+++ b/index.html
@@ -84,16 +84,10 @@
             <div class="docs-inner">
             <h2 class="title text-center">Свежее обновление</h2>            
             <div class="block">
-                <h3 class="sub-title text-center">Retro Cafe</h3>
+                <h3 class="sub-title text-center"><!--Название обновления--></h3>
                 
-                        <p class="qwer">Друзья! 
-                        <br>
-                        <br>Новинка в магазине мебели - коллекция Retro Cafe! 
-                        <br>Теперь обустроить собственную кофейню, насладиться звучанием виниловых пластинок или выпить 
-                        молочный коктейль в компании приятелей можно не выходя из дома! 
-                        <br>Кроме того, у вас есть уникальная возможность купить интерьер и получить комнату в подарок! 
-                        <br>Поторопитесь, акция действует всего неделю.</p>
-                        <img src="image/3.png"> 
+                        <p class="qwer"><!--Содержимое обновления--></p>
+                        <img src="image/4.png"> 
             </div><!--//docs-inner-->         
         </div><!--//container-->
     </section><!--//features-->
